[project]
name = "NExT-ATS-Backend"
version = "0.1.0"
description = "FastAPI backend for NExT's Applicant Tracker"
readme = "backend-README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg2-binary>=2.9.0",
  "pydantic-settings>=2.4.0",
  "boto3>=1.35.0",
  "python-multipart>=0.0.9",
  "faker>=24.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
